
  o FEATURE: Regularize sphere function introduced.

  o FEATURE: --update-self to update pre-release binary from server.

  o FEATURE: SBase molecules can be imported (under Search Monomer
    Library).

  o FEATURE: prodrg-ify ligand function added (generates restraints
    for the specified residue).

  o FEATURE: higly-coordinated waters metal substitution search added.

  o FEATURE: New map representation styles, solid/transparent and
    "cut-glass"

  o CHANGE: Align & Mutate now provides a simple dialog with the
    alignment.

  o CHANGE: Environment distances are separated into bumps and bonds
    [Bob Nolte].

  o CHANGE: Move molecule here only moves small molecules by default
    now.  There is an check button to allow big molecules [Kevin
    Madauss].

  o CHANGE: In MTZ reading Expert Mode, if the low resolution limit is
    not set, then presume that it was 999.9A [Randy Read].

  o CHANGE: pointer distances are updated on go-to-blob [JED].

  o CHANGE: Real-space refinement is now interruptible [JED].

  o CHANGE: NCS skipping now works in the reverse chain order too
    (Shift-O) [JED].

  o CHANGE: Residues are checked atom by atom against the dictionary
    and refinement is not started if there is not complete agreement
    (for non-Hydrogen atoms) [JED].

  o CHANGE: Merged molecules are undisplayed after merging.

  o CHANGE: "Replace residue" will use a dictionary and model for a
    particular 3-letter code if they have been already read in (rather
    than run libcheck blindly) [Ian Tickle].
 
  o CHANGE: SSM overlayed molecule now takes symmetry of reference
    molecule

  o CHANGE: Waters are now represented with "~" in the sequence view -
    so that there is a distinction between waters and interesting
    hetatoms.

  o CHANGE: Using the scroll wheel with Ctrl and Shift will change the
    represention of the molecule that has the active residue.

  o BUG-FIX:: Hydrogens on waters are no longer checked against the