@@ -105,7 +105,7 @@ in the second of the two entry boxes. Press "Go".
 We how the correct ligand now, So let's move on to search the map for
 entities of this kind.
 
- \textsf{Calculate $\rightarrow$ Other Modelling Tool $\rightarrow$ Find Ligands...}
+ \textsf{Calculate $\rightarrow$ Other Modelling Tools $\rightarrow$ Find Ligands...}
 
  We have 2 maps from which to choose.  For now, let's choose the
  2mFo-DFc map and find density clusters above 1.0 sigma.  Make sure
